; ModuleID = '/home/carl/AnghaBench/git/extr_lockfile.c_lock_file.c'
source_filename = "/home/carl/AnghaBench/git/extr_lockfile.c_lock_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.lock_file = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@LOCK_NO_DEREF = common dso_local global i32 0, align 4
@LOCK_SUFFIX = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lock_file*, i8*, i32)* @lock_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lock_file(%struct.lock_file* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.lock_file*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.strbuf, align 4
  store %struct.lock_file* %0, %struct.lock_file** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = bitcast %struct.strbuf* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %8, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @strbuf_addstr(%struct.strbuf* %7, i8* %9)
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @LOCK_NO_DEREF, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %3
  %16 = call i32 @resolve_symlink(%struct.strbuf* %7)
  br label %17

17:                                               ; preds = %15, %3
  %18 = load i8*, i8** @LOCK_SUFFIX, align 8
  %19 = call i32 @strbuf_addstr(%struct.strbuf* %7, i8* %18)
  %20 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %7, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call %struct.TYPE_2__* @create_tempfile(i32 %21)
  %23 = load %struct.lock_file*, %struct.lock_file** %4, align 8
  %24 = getelementptr inbounds %struct.lock_file, %struct.lock_file* %23, i32 0, i32 0
  store %struct.TYPE_2__* %22, %struct.TYPE_2__** %24, align 8
  %25 = call i32 @strbuf_release(%struct.strbuf* %7)
  %26 = load %struct.lock_file*, %struct.lock_file** %4, align 8
  %27 = getelementptr inbounds %struct.lock_file, %struct.lock_file* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = icmp ne %struct.TYPE_2__* %28, null
  br i1 %29, label %30, label %36

30:                                               ; preds = %17
  %31 = load %struct.lock_file*, %struct.lock_file** %4, align 8
  %32 = getelementptr inbounds %struct.lock_file, %struct.lock_file* %31, i32 0, i32 0
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  br label %37

36:                                               ; preds = %17
  br label %37

37:                                               ; preds = %36, %30
  %38 = phi i32 [ %35, %30 ], [ -1, %36 ]
  ret i32 %38
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #2

declare dso_local i32 @resolve_symlink(%struct.strbuf*) #2

declare dso_local %struct.TYPE_2__* @create_tempfile(i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
